# total-kz

./: .env  .env.example  .gitignore  AD_INVENTORY_SPEC.md  ARCHITECTURE.md  AUDIT_STATUS.md  CHANGELOG.md  CMS_ADMIN_SPEC.md  CMS_ENHANCE_SPEC.md  Dockerfile  FEATURE_PLAN_2026.md  KNOWN_ISSUES.md  LICENSE  PROJECT.md  README.md  TASK_PHASE3.md  UPGRADE_V10_2_SPEC.md  alembic.ini  audit_data.py  audit_entities_all.json  audit_entities_location.json  audit_entities_org.json  audit_entities_person.json  audit_tags.json  create_missing_tables.py  create_persons.py  debug_image.py  diagnose_gap.py  docker-compose.yml  fill_images.py  fix_article_6.py  fix_article_grid.py  fix_article_layout.py  fix_audit_batch1.py  fix_audit_batch2.py  fix_balance_all.py  fix_cat_final.py  fix_category.py  fix_design.py  fix_design2.py  (+16 more)
alembic/: env.py
app/: _patch_fstring.py  auth.py  auto_translate.py  autopost.py  cache.py  config.py  currency.py  database.py  db_backend.py  display_mode.json  geo.py  gsc_analysis.json  healthcheck.py  main.py  models.py  og_generator.py  pg_database.py  pg_queries.py  public_routes.py  scheduler.py  search_analytics.py  search_engine.py  seo_analytics.py  social.py  social_routes.py  weather.py  workflow.py
data/: persons_need_photos.txt  persons_to_find.txt  total.db-shm  total.db-wal  total.db.empty  total.db.gz.part_ad  zakon_urls.txt
deploy/: cloudflare-setup.md  deploy.sh  nginx-total-qdev-run.conf  setup-firewall.sh  setup-nginx.sh
docs/: API.md  ARCHITECTURE.md  AUDIT_REPORT.md
scraper/: backup_db.py  cleanup_data.py  cleanup_entities.py  (+33 more)
(+119 files in other folders)
